--- a/Makefile.am
+++ b/Makefile.am
@@ -1,24 +1,14 @@
 #
-# Copyright (c) 2018-2023, Amazon.com, Inc. or its affiliates. All rights reserved.
+#Copyright(c) 2018 - 2023, Amazon.com, Inc.or its affiliates.All rights reserved.
 #
-# See LICENSE.txt for license information
+#See LICENSE.txt for license information
 #
 
-ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = include 3rd-party src topology tests
-EXTRA_DIST = \
-	autogen.sh \
-	CODE_OF_CONDUCT.md \
-	CONTRIBUTING.md \
-	INSTALL.md \
-	LICENSE \
-	NOTICE \
-	README.md \
-	RELEASENOTES.md
+ACLOCAL_AMFLAGS = -I m4 SUBDIRS = include 3rd - party src topology tests EXTRA_DIST =
+                                      autogen.sh CODE_OF_CONDUCT.md CONTRIBUTING.md INSTALL.md LICENSE NOTICE README.md RELEASENOTES.md
 
-AM_DISTCHECK_CONFIGURE_FLAGS=$(NCCL_NET_OFI_DISTCHCK_CONFIGURE_FLAGS)
+                                          AM_DISTCHECK_CONFIGURE_FLAGS = $(NCCL_NET_OFI_DISTCHCK_CONFIGURE_FLAGS)
 
-# Reset ownership to 0 (root) in distribution tarball
-# Ref: https://www.gnu.org/software/automake/manual/html_node/Basics-of-Distribution.html
-TAR_OPTIONS = --owner=0 --group=0
-export TAR_OPTIONS
+#Reset ownership to 0(root)in distribution tarball
+#Ref : https: // www.gnu.org/software/automake/manual/html_node/Basics-of-Distribution.html
+                                          TAR_OPTIONS = --owner = 0 --group = 0 export TAR_OPTIONS
